fixed nav z-index

--- a/css/index.css
+++ b/css/index.css
@@ -756,7 +756,7 @@
 }
 /*colors*/
 .navigation {
-  z-index: 1;
+  z-index: 2;
   flex-wrap: nowrap;
   max-height: 60px;
 }
